<resources>
    <string name="app_name">CoinMate</string>
    // Languaje (Español)

    <!-- General -->
    <string name="btn_return">Volver</string>

    <!-- LoginFragment -->
    <string name="login_title">- INICIO DE SESION -</string>
    <string name="msg_main_welcome">Bienvenido a CoinMate!</string>
    <string name="et_main_hint">Usuario</string>
    <string name="msg_main_advise">Primero introduce tu nombre</string>
    <string name="btn_main_login">Iniciar sesión</string>

    <!-- MenuFragment -->
    <string name="main_menu_title">- PRINCIPAL -</string>
    <string name="msg_menu_welcome">%s, Bienvenido a CoinMate!</string>
    <string name="btn_collection">Mi colección</string>
    <string name="btn_catalog">Catálogo</string>
    <string name="img_description_settings">Ajustes</string>
    <string name="img_description_userInfo">Informacion usuario</string>

    <!-- CreditFragment -->
    <string name="credit_title">- AJUSTES -</string>
    <string name="img_description_light">Modo claro</string>
    <string name="img_description_dark">Modo oscuro</string>
    <string name="languaje_es">Español</string>
    <string name="languaje_en">English</string>
    <string name="languaje_actual">Español</string>

    <!-- UserInfoFragment -->
    <string name="user_info_title">- USUARIO -</string>
    <string name="user_name">Nombre de usuario: %s</string>
    <string name="user_fav_Count0">Ninguna moneda marcada como favorita</string>
    <string name="user_fav_Count1">%s moneda marcada como favorita</string>
    <string name="user_fav_Count">%s monedas marcadas como favoritas</string>


    <!-- item_coins -->
    <string name="CountryTit">Pais</string>
    <string name="YearTit">Año</string>
    <string name="ValueTit">Valor</string>
    <string name="DetallesTit">Detalles</string>

    <!-- ItemList -->
    <string name="item_list_title">- CATÁLOGO -</string>
    <string name="item_image_description">Imagen de la moneda</string>
    <string name="btn_favourites">Favoritos</string>

    <!-- DetailItemList -->
    <string name="detail_item_list_title">- DETALLES -</string>

    <!-- FavItemList -->
    <string name="fav_item_list_title">- FAVORITOS -</string>

    <!-- FavDetailItemList -->
    <string name="fav_item_fab_description">Añadir comentario</string>

    <!-- TODO
        Guardar comentarios de monedas y guardarlos.
    -->


    <!-- sin categorizar -->

</resources>