<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/android_home_2"
        android:title="@string/main_menu_title" />
    <item
        android:id="@+id/bottom_catalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cash_31"
        android:title="@string/item_list_title" />
    <item
        android:id="@+id/bottom_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/round_favorite_24"
        android:title="@string/fav_item_list_title" />
</menu>