<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_theme_background"
    tools:context=".MenuFragment">


    <ImageView
        android:id="@+id/imgSettings"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:src="@drawable/round_settings_24"
        android:contentDescription="@string/img_description_settings"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imgUserInfo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/round_account_circle_24"
        android:contentDescription="@string/img_description_userInfo"

        app:layout_constraintEnd_toStartOf="@id/imgSettings"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        />



    <TextView
        android:id="@+id/tv_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_menu_welcome"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        />

    <Button
        android:id="@+id/btnCollection"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_collection"

        android:enabled="false"

        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCatalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnCatalog"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_catalog"


        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="75dp"
        />



    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>